fixed font size and column width on tablet media query

--- a/computer.css
+++ b/computer.css
@@ -83,7 +83,7 @@ and (min-device-width: 1441px)
 
 
     .header {
-        background-image: url(images/markus-spiske-221494-unsplash.jpg);
+        background-image: url(images/buzz-andersen-145254-unsplash.jpg);
         height: 100vh;
         background-size: cover;
         position: relative;
