--- a/laptop.css
+++ b/laptop.css
@@ -72,7 +72,7 @@ and (max-device-width: 1024px) {
 }
 
 .header {
-    background-image: url(images/markus-spiske-221494-unsplash.jpg);
+    background-image: url(images/buzz-andersen-145254-unsplash.jpg);
     height: 100vh;
     background-size: cover;
     position: relative;
@@ -199,7 +199,7 @@ and (max-device-width: 1440px) {
 }
 
 .header {
-    background-image: url(images/markus-spiske-221494-unsplash.jpg);
+    background-image: url(images/buzz-andersen-145254-unsplash.jpg);
     height: 100vh;
     background-size: cover;
     position: relative;
